--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ h1 {
     justify-content: center;
     align-items: center;
     border-radius: 1.3rem;   
+    padding: 0 2rem 2rem 2rem;
+    position: relative;
 }
 
 
@@ -34,10 +36,11 @@ h1 {
     text-transform: uppercase;
     font-weight: bold;
     color: rgb(200, 175, 255);
+    padding: 1rem;
 }
 
 .tabs p {
-    padding: 0.9rem;
+    padding: 0.5rem;
 }
 
 .tabs p:hover {
@@ -47,7 +50,14 @@ h1 {
 
 .tabs p.active {
     color: rgb(83, 49, 156);
+}
 
+.line {
+    height: 3px;
+    background-color: rgb(231, 231, 231);
+    width: 100%;
+    top: 6.1rem;
+    position: absolute;
 }
 
 
