--- a/style.css
+++ b/style.css
@@ -62,14 +62,51 @@ h1 {
 
 .tabs .active::before {
     content: "";
-    width: 15%;
+    width: 12%;
     border-radius: 0.7rem;
     height: 0.3rem;
     background-color: rgb(83,49, 156);
     position: absolute;
-    bottom: 2rem;
+    bottom: 4.5rem;
     z-index: 2;
-    left: 25%;
+    left: 27%;
+}
+
+.toggle-wrapper {
+    display: flex;
+    margin-left: 3rem;
+    /* padding-top: 5rem; */
+}
+
+.toggle-wrapper img {
+    height: 2.5rem;
+    margin: 0 0.5rem;
+}
+
+.toggle {
+    background-color: rgb(83, 49, 156);
+    height: 2rem;
+    width: 11rem;
+    border-radius: 1.2rem;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 0.2rem 0 1rem;
+    box-sizing: border-box;
+    align-items: center;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+
+.toggle span:first-of-type {
+    color: #fff;
+}
+
+.toggle span:last-of-type {
+    background-color: #fff;
+    color: rgb(83,49, 156);
+    padding: 0.1rem 1rem;
+    border-radius: 1.4rem;
 }
 
 
